2007-11-15  Andreas Schwab  <schwab@suse.de>

	* editfns.c (Fformat): Correctly format EMACS_INT values.  Also
	take precision into account when formatting an integer.

2007-11-15  Juanma Barranquero  <lekktu@gmail.com>

	* macfns.c (Fx_create_frame, Fx_display_pixel_width)
	(Fx_display_pixel_height, Fx_display_planes)
	(Fx_display_color_cells, Fx_server_max_request_size)
	(Fx_server_vendor, Fx_server_version, Fx_display_backing_store)
	(Fx_display_visual_class, Fx_display_save_under):
	* w32fns.c (Fx_create_frame, Fx_display_pixel_width)
	(Fx_display_pixel_height, Fx_display_planes)
	(Fx_display_color_cells, Fx_server_max_request_size)
	(Fx_server_vendor, Fx_server_version, Fx_display_screens)
	(Fx_display_mm_height, Fx_display_mm_width)
	(Fx_display_backing_store, Fx_display_visual_class)
	(Fw32_select_font, Fx_display_save_under):
	* xfns.c (Fx_create_frame, Fx_display_pixel_width)
	(Fx_display_pixel_height, Fx_display_planes)
	(Fx_display_color_cells, Fx_server_max_request_size)
	(Fx_server_vendor, Fx_server_version, Fx_display_backing_store)
	(Fx_display_save_under): Fix typos in docstrings.

2007-11-14  Juanma Barranquero  <lekktu@gmail.com>

	* w32fns.c (Fw32_registered_hot_keys): Don't return the nil values
	corresponding to deleted entries; they are an implementation detail.
	(gray_bitmap_width, gray_bitmap_height, gray_bitmap_bits):
	Remove variables.
	(Fw32_define_rgb_color, Fw32_load_color_file): Fix typos in docstrings.
	(Fx_server_version): Reflow docstring.
	(Fw32_shell_execute): Doc fixes.

2007-11-13  Juanma Barranquero  <lekktu@gmail.com>

	* w32fns.c (Fw32_register_hot_key): Don't try to register hot key
	if w32_parse_hot_key returned nil.

2007-11-10  Juri Linkov  <juri@jurta.org>

	* puresize.h (BASE_PURESIZE): Increase to 1130000.

2007-11-10  Stefan Monnier  <monnier@iro.umontreal.ca>

	* xdisp.c (load_overlay_strings): Fix copy&paste typo.

2007-11-07  Chong Yidong  <cyd@stupidchicken.com>
